# validador-schema-excel

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  backend.py  contract.py  frontend.py  ok.py  test_ci.py
tests/: test_contract.py  test_functional.py
