[tool.poetry]
name = "validador-schema-excel"
version = "1.0"
description = ""
authors = ["fsgregorio <fsgregorio92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
pandas = "^2.2.3"
streamlit = "^1.42.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
pytest = "^8.3.4"
selenium = "^4.29.0"
dotenv = "^0.9.9"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
